--- a/nexa-frontend-next/package.json
+++ b/nexa-frontend-next/package.json
@@ -15,19 +15,25 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-visually-hidden": "^1.2.4",
     "axios": "^1.13.2",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "intl-tel-input": "^25.13.1",
     "laravel-echo": "^2.2.6",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "pusher-js": "^8.4.0",
     "react": "19.2.1",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
+    "react-phone-number-input": "^3.4.14",
     "sonner": "^2.0.7",
     "tailwindcss-animate": "^1.0.7"
   },
