--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,8 +49,10 @@ services:
       REVERB_HOST: "chat"
       REVERB_PORT: 8080
       APP_URL: http://localhost:8000
-      FRONTEND_URL: http://localhost:5000
-      APP_FRONTEND_URL: http://localhost:5000
+      FRONTEND_URL: http://localhost:3000
+      APP_FRONTEND_URL: http://localhost:3000
+      SANCTUM_STATEFUL_DOMAINS: localhost:3000
+      GOOGLE_REDIRECT_URI: http://localhost:3000/auth/google/callback
     volumes:
       - ./backend:/var/www/html
     working_dir:
