--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,8 @@ services:
       FRONTEND_URL: http://localhost:3000
       APP_FRONTEND_URL: http://localhost:3000
       SANCTUM_STATEFUL_DOMAINS: localhost:3000
+      GOOGLE_CLIENT_ID: ${GOOGLE_CLIENT_ID}
+      GOOGLE_CLIENT_SECRET: ${GOOGLE_CLIENT_SECRET}
       GOOGLE_REDIRECT_URI: http://localhost:3000/auth/google/callback
     volumes:
       - ./backend:/var/www/html
