--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,7 +39,8 @@
     "react-icons": "^5.5.0",
     "react-phone-number-input": "^3.4.14",
     "sonner": "^2.0.7",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5"
   },
   "devDependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -63,7 +64,6 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
     "zod": "^4.2.0"
   }
 }
