feat: Add initial frontend setup including Docker, ESLint, Echo real-time communication, and API authentication.

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,20 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm ci
 COPY . .
+
+# Build-time environment variables
+ARG NEXT_PUBLIC_BACKEND_URL
+ARG NEXT_PUBLIC_REVERB_APP_KEY
+ARG NEXT_PUBLIC_REVERB_HOST
+ARG NEXT_PUBLIC_REVERB_PORT
+ARG NEXT_PUBLIC_REVERB_SCHEME
+
+ENV NEXT_PUBLIC_BACKEND_URL=$NEXT_PUBLIC_BACKEND_URL
+ENV NEXT_PUBLIC_REVERB_APP_KEY=$NEXT_PUBLIC_REVERB_APP_KEY
+ENV NEXT_PUBLIC_REVERB_HOST=$NEXT_PUBLIC_REVERB_HOST
+ENV NEXT_PUBLIC_REVERB_PORT=$NEXT_PUBLIC_REVERB_PORT
+ENV NEXT_PUBLIC_REVERB_SCHEME=$NEXT_PUBLIC_REVERB_SCHEME
+
 RUN npm run build
 
 FROM node:24-alpine AS runner
