--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.13.2",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "intl-tel-input": "^25.13.1",
     "laravel-echo": "^2.2.6",
     "next": "16.0.10",
