--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     "jest-environment-jsdom": "^30.2.0",
     "lucide-react": "^0.561.0",
     "react-hook-form": "^7.68.0",
+    "supabase": "^2.70.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
