Fix E2E Contract Lifecycle test: Stripe redirect handling, payment sync, and robust offer acceptance

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ Desktop.ini
 .trae/
 
 root_Nexa-Backend.env
+
+# Test logs and artifacts
+*.log
+*.txt
+**/test-results/
+**/playwright-report/
+**/blob-report/
