--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "typescript": "^5"
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
     "@hookform/resolvers": "^5.2.2",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4",
@@ -68,6 +69,7 @@
     "jest-environment-jsdom": "^30.2.0",
     "lucide-react": "^0.561.0",
     "react-hook-form": "^7.68.0",
+    "shadcn": "^3.6.2",
     "supabase": "^2.70.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4",
