--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,7 +35,7 @@
     "framer-motion": "^12.23.26",
     "intl-tel-input": "^25.13.1",
     "laravel-echo": "^2.2.6",
-    "next": "16.0.10",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "pusher-js": "^8.4.0",
     "react": "19.2.1",
