--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-phone-number-input": "^3.4.14",
     "sonner": "^2.0.7",
     "tailwindcss-animate": "^1.0.7",
